user done, home done. about done.

--- a/src/app/misc/about/about.component.html
+++ b/src/app/misc/about/about.component.html
@@ -1,2 +1,20 @@
 <app-menu></app-menu>
-<p>about works!</p>
+<div style="text-align: center;">
+    <h1>About the Developer</h1>
+    <img style="width: 200px;" src="assets/photo.jpg">
+    <h2>Charlie Traylor</h2>
+    <p style="margin-bottom: 32px;">This is Charlie. He is 29 years old, from Hamilton Ohio.
+    He has done many a job, from fast food to cosmetic sales,
+    and more. But now he is ready to make a big career change.
+    Stepping into the world of software development with an
+    open mind, he is prepared to be a life long learner.</p>
+
+    <h5>He is an absolute joy to work with!</h5>
+    <h6 style="margin-bottom: 32px;">-Courtney Pope, former supervisor</h6>
+    <h5>Sir, I'm going to have to ask you to quit calling.</h5>
+    <h5>This is your last warning</h5>
+    <h6 style="margin-bottom: 32px;">-The New York Times</h6>
+    <h5>Trailer? Like a mobile home? No Thanks, Im not looking for a new living situation.</h5>
+    <h6 style="margin-bottom: 32px;">-My neighbor Randy</h6>
+    <p style="font-weight: bold;">Contact Info: Ctraylor@tql.com | 513-306-3842</p>
+</div>
