--- a/src/app/misc/home/home.component.html
+++ b/src/app/misc/home/home.component.html
@@ -1,2 +1,13 @@
 <app-menu></app-menu>
-<p>home works!</p>
+<div style="text-align: center;">
+
+    <h1 style="margin-bottom: 16px;">Home Page</h1>
+    <h4>Hello! Welcome to the home page of my Capstone project.</h4>
+    <h4>There isn't a whole lot going on here on the home page,</h4>
+    <h4>but if you select one of the menu items above, you will</h4>
+    <h4>be directed to where all the action is. Everything should</h4>
+    <h4>be running smoothly. Probably. But that is for me to know</h4>
+    <h4>and for you to go find out yourself. If you do happen to</h4>
+    <h4>run into any issues please refer to the About tab above.</h4>
+    <h4>You will find my contact info there.</h4>
+</div>
