--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -1,1 +1,43 @@
-<p>user-detail works!</p>
+<app-menu></app-menu>
+    <div>
+        <table class="table table-sm" style="width: 40%;">
+            <tr>
+                <td>Id:</td>
+                <td><input [(ngModel)]="user.id" type="number" disabled></td>
+            </tr>
+            <tr>
+                <td>Username:</td>
+                <td><input [(ngModel)]="user.username" type="text"disabled ></td>
+            </tr>
+            <tr>
+                <td>Password:</td>
+                <td><input [(ngModel)]="user.password" type="text" disabled></td>
+            </tr>
+            <tr>
+                <td>Firstname:</td>
+                <td><input [(ngModel)]="user.firstname" type="text" disabled></td>
+            </tr>
+            <tr>
+                <td>Lastname:</td>
+                <td><input [(ngModel)]="user.lastname" type="text"disabled ></td>
+            </tr>
+            <tr>
+                <td>Phone:</td>
+                <td><input [(ngModel)]="user.phone" type="text"disabled ></td>
+            </tr>
+            <tr>
+                <td>Email:</td>
+                <td><input [(ngModel)]="user.email" type="text" disabled></td>
+            </tr>
+            <tr>
+                <td>IsReviewer:</td>
+                <td><input [(ngModel)]="user.isReviewer" type="checkbox" disabled></td>
+            </tr>
+            <tr>
+                <td>IsAdmin:</td>
+                <td><input [(ngModel)]="user.isAdmin" type="checkbox" disabled ></td>
+            </tr>
+           
+        </table>
+        <button (click)="delete()" class="btn btn-primary">Delete User</button>
+    </div>
