request line partial

--- a/src/app/request/request-list/request-list.component.html
+++ b/src/app/request/request-list/request-list.component.html
@@ -29,6 +29,10 @@
                 <span>
                     <a routerLink="/request/edit/{{r.id}}">Edit</a>
                 </span>
+                <span> | </span>
+                <span>
+                    <a routerLink="/request/lines/{{r.id}}">Lines</a>
+                </span>
             </td>
         </tr>
     </tbody>
