--- a/src/app/request/request-lines/request-lines.component.html
+++ b/src/app/request/request-lines/request-lines.component.html
@@ -41,15 +41,15 @@
             <td>{{line.product?.name}}</td>
             <td>{{line.quantity}}</td>
             <td>{{line.product?.price}}</td>
-            <!-- <td>
+            <td>
                 <span>
-                    <a routerLink="/requestLines/edit/{{requestLines.id}}">Edit</a>
+                    <a routerLink="/requestLines/edit/{{line.id}}">Edit</a>
                 </span>
                 <span> | </span>
                 <span>
-                    <a routerLink="/requestLines/delete/{{requestLines.id}}">Delete</a>
+                    <a routerLink="/requestLines/detail/{{line.id}}">Detail</a>
                 </span>
-            </td> -->
+            </td> 
             
         </tr>
     </tbody>
