--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -25,6 +25,10 @@
                 <td>PhotoPath:</td>
                 <td><input [(ngModel)]="product.photoPath" type="text"disabled ></td>
             </tr>
+            <tr>
+                <td>Vendor:</td>
+                <td><input [(ngModel)]="product.vendorId" type="text"disabled ></td>
+            </tr>
         </table>
         <button (click)="delete()" class="btn btn-primary">Delete Product</button>
     </div>        
