--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -26,8 +26,10 @@
                 <td><input [(ngModel)]="product.photoPath" type="text" ></td>
             </tr>
             <tr>
-                <td>Vendor Id:</td>
-                <td><input [(ngModel)]="product.vendorId" type="number" disabled></td>
+                <td>Vendor:</td>
+                <td><select [(ngModel)]="product.vendorId">
+                    <option *ngFor = "let v of vendors" value="{{v.id}}">{{v.name}}</option>
+                </select></td>
             </tr>
             
            
