--- a/src/app/requestline/requestline-create/requestline-create.component.html
+++ b/src/app/requestline/requestline-create/requestline-create.component.html
@@ -1,1 +1,27 @@
-<p>requestline-create works!</p>
+<app-menu></app-menu>
+    <div>
+        <table class="table table-sm" style="width: 40%;">
+            <tr>
+                <td>Id:</td>
+                <td><input [(ngModel)]="rLine.id" type="number" disabled></td>
+            </tr>
+            <tr>
+                <td>Product:</td>
+                <td><select [(ngModel)]="rLine.productId">
+                    <option *ngFor ="let p of products" value="{{p.id}}">{{p.name}}</option>
+                </select></td>
+            </tr>
+            <tr>
+                <td>Request Id:</td>
+                <td><input [(ngModel)]="rLine.requestId" type="text" disabled></td>
+            </tr>
+            <tr>
+                <td>Quantity:</td>
+                <td><input [(ngModel)]="rLine.quantity" type="number"></td>
+            </tr>
+           
+            
+           
+        </table>
+        <button (click)="save()" class="btn btn-primary">Save</button>
+    </div>
