--- a/src/app/requestline/requestline-detail/requestline-detail.component.html
+++ b/src/app/requestline/requestline-detail/requestline-detail.component.html
@@ -1,1 +1,26 @@
-<p>requestline-detail works!</p>
+<app-menu></app-menu>
+    <div>
+        <table class="table table-sm" style="width: 40%;">
+            <tr>
+                <td>Id:</td>
+                <td><input [(ngModel)]="rLine.id" type="number" disabled></td>
+            </tr>
+            <tr>
+                <td>Product Id:</td>
+                <td><input [(ngModel)]= "rLine.productId" type="number" disabled></td>
+            </tr>
+            <tr>
+                <td>Request Id:</td>
+                <td><input [(ngModel)]="rLine.requestId" type="text" disabled></td>
+            </tr>
+            <tr>
+                <td>Quantity:</td>
+                <td><input [(ngModel)]="rLine.quantity" type="number"disabled></td>
+            </tr>
+           
+            
+           
+        </table>
+        <button (click)="delete()" class="btn btn-primary">Delete</button>
+    </div>
+
