--- a/src/app/misc/about/about.component.html
+++ b/src/app/misc/about/about.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <div style="text-align: center;">
     <h1>About the Developer</h1>
-    <img style="width: 200px;" src="assets/photo.jpg">
+    <img style="width: 200px;" src="assets/headshot.jpg">
     <h2>Charlie Traylor</h2>
     <p style="margin-bottom: 32px;">This is Charlie. He is 29 years old, from Hamilton Ohio.
     He has done many a job, from fast food to cosmetic sales,
