--- a/src/app/request/request-lines/request-lines.component.html
+++ b/src/app/request/request-lines/request-lines.component.html
@@ -19,7 +19,7 @@
             <td>{{request.user?.username}}</td>
             <span>
                 
-                <a style="text-decoration: underline; color: blue;"   (click)="review()">Review</a>
+                <button style="text-decoration: underline; color: blue; border-width: 0px; padding: 0px; background-color: white; font-weight: normal;"   (click)="review()">Review</button>
             </span>
         </tr>
     </tbody>
